# StringMatchingAlgorithmsCode

./: CMakeLists.txt  main.cpp
Alpha-Skip-Search/: Alpha-Skip-Search.cpp  Alpha-Skip-Search.h
Apostolico_Crochemore/: Apostolico_Crochemore.cpp  Apostolico_Crochemore.h
Berry-Ravindran/: Berry-Ravindran.cpp  Berry-Ravindran.h
Boyer-Moore/: Boyer-Moore.cpp  Boyer-Moore.h
Brute_Force/: brute_force.cpp  brute_force.h
Deterministic_Finite_Automaton/: deterministic_finite_automaton.cpp  deterministic_finite_automaton.h
Horspool/: Horspool.cpp  Horspool.h
KMP-Skip-Search/: KMP-Skip-Search.cpp  KMP-Skip-Search.h
Karp-Rabin/: Karp-Rabin.cpp  Karp-Rabin.h
Knuth-Morris-Pratt/: Knuth-Morris-Pratt.cpp  Knuth-Morris-Pratt.h
Maximal-Shift/: Maximal-Shift.cpp  Maximal-Shift.h
Morris-Pratt/: Morris-Pratt.cpp  Morris-Pratt.h
NotSoNaive/: NotSoNaive.cpp  NotSoNaive.h
Optimal-Mismatch/: Optimal-Mismatch.cpp  Optimal-Mismatch.h
Quick-Search/: Quick-Search.cpp  Quick-Search.h
Raita/: Raita.cpp  Raita.h
ShiftOr/: ShiftOr.cpp  ShiftOr.h
Skip-Search/: Skip-Search.cpp  Skip-Search.h
Smith/: Smith.cpp  Smith.h
StringMatchingOnOrderedAlphabets/: StringMatchingOnOrderedAlphabets.cpp  StringMatchingOnOrderedAlphabets.h
Tuned-Boyer-Moore/: Tuned-Boyer-Moore.cpp  Tuned-Boyer-Moore.h
Zhu-Takaodo/: Zhu-Takaodo.cpp  Zhu-Takaodo.h
graph/: graph.cpp  graph.h
